feat: static headers

--- a/packages/astro/test/fixtures/static-headers/src/pages/dynamic.astro
+++ b/packages/astro/test/fixtures/static-headers/src/pages/dynamic.astro
@@ -1,6 +1,6 @@
 ---
 export const prerender = false
-Astro.staticHeaders.set("x-custom-header", "dynamic")
+Astro.setStaticHeader("x-custom-header", "dynamic")
 ---
 
 
