--- a/packages/astro/test/fixtures/static-headers/src/pages/static.astro
+++ b/packages/astro/test/fixtures/static-headers/src/pages/static.astro
@@ -1,6 +1,6 @@
 ---
 export const prerender = true
-Astro.staticHeaders.set("x-custom-header", "static")
+Astro.setStaticHeader("x-custom-header", "static")
 ---
 
 
